crates/testing/compiletest-integration/tests/run-pass/generic-max.rs
fn max<T>(a: T, b: T) -> T {
    if a > b {
        a
    } else {
        b
    }
}

fn main() -> i64 {
    max(10, 42)
}
